--- a/index.html
+++ b/index.html
@@ -36,9 +36,15 @@
         <button>Register</button>
       </div>
       <div class="links-wrapper">
-        <a class="facebook" href="#"> <img src="./images/logo-facebook.svg" alt="facebook" /></a>
-        <a class="twitter" href="#"> <img src="./images/twitter-brands.svg" alt="twitter" /></a>
-        <a class="instagram" href="#"> <img src="./images/logo-instagram.svg" alt="instagram" /></a>
+        <a class="facebook" href="#">
+          <img src="./images/facebook-f-brands.svg" alt="facebook"
+        /></a>
+        <a class="twitter" href="#">
+          <img src="./images/twitter-brands.svg" alt="twitter"
+        /></a>
+        <a class="instagram" href="#">
+          <img src="./images/logo-instagram.svg" alt="instagram"
+        /></a>
       </div>
 
       <footer>
@@ -46,7 +52,8 @@
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="#">Your Name Here</a>.
+          >. Coded by
+          <a href="https://github.com/rikirovinsky">Richard Rovinsky</a>.
         </p>
       </footer>
     </div>
