--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta
+      charset="UTF-8"
+      name="Landing page"
+      content="Example of landing page, author Richard Rovinsky, project provided by Frontendmentor.io"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="resetstyle.css" />
     <link rel="stylesheet" href="style.css" />
@@ -50,10 +54,18 @@
       <footer>
         <p class="attribution">
           Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          <a
+            href="https://www.frontendmentor.io?ref=challenge"
+            target="_blank"
+            rel="noreferrer"
             >Frontend Mentor</a
           >. Coded by
-          <a href="https://github.com/rikirovinsky">Richard Rovinsky</a>.
+          <a
+            href="https://github.com/rikirovinsky"
+            target="_blank"
+            rel="noreferrer"
+            >Richard Rovinsky</a
+          >.
         </p>
       </footer>
     </div>
