--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         />
       </div>
       <div class="text-wrapper">
-        <h1>Build The Community Your Fans Will Love</h1>
+        <h1>
+          Build The Community <br />
+          Your Fans Will Love
+        </h1>
         <p>
           Huddle re-imagines the way we build communities. You have a voice, but
           so does your audience. Create connections with your users as you
